Зміни в Assignment10Part1:
     - видалений весь закоментований код.
     - видалено всі лишні System.out
     - видалено OPERATORS_LIST та весь код який його використовував.
     - заповнення змінних в мапу variables винесено в окремий метод.
     - метод main ловить винятки та виводить помилку або результат обчислення.
     - додано метод checkAndPushVariable(..) для заміни змінних в RPN
     - змінено метод calculateRPN:
            - змінено логіку витягування токенів з RPN та проведення обчислення
            - додано метод executeOperator(..) який виконує арифметичну операцію для двох останніх чисел у стеку
            - додано викидання винятків
     - змінено метод parse:
            - винесена обробка унарного мінуса в метод handleUnaryMinus(..)
            - додано isOperator(..) для перевірки символу
            - додано handleOperator(..) для обробки оператору
            - додано handleStackPrecedence для обробки стека операторів згідно з асоціативністю
                   - змінено логіку перевірки асоціативності за допомогою методів: isPow isDivOrMulti isPlusOrMinus
                   - додано метод addAllOperatorsToRPN - виштовхує оператор зі стека в RPN
                                                         і повертає наступний елемент стека
            - винесена обробка кінця виразу в метод handleEndOfExpression(..)
     - замінено LinkedList на ArrayDeque.
     - замінено виклик методу makeBaseOperation(..) та обробка операндів

Зміни в Assignment11Part1:
    - видалено класи-оператори які не відносяться до умови.
    - замінено LinkedList на ArrayDeque.
    - видалено метод logCalculation(..)
    - метод setVariables(..) замінено на checkAndPushVariable(..) для коректної роботи з ArrayDeque.
    -